--- a/Affiliate/index4.html
+++ b/Affiliate/index4.html
@@ -22,6 +22,13 @@
         </form>
         <div id="listMessage" class="message"></div>
     </section>
+
+<!-- Section for displaying listed NFTs -->
+<section id="listedNFTs">
+    <h2>Listed NFTs</h2>
+    <div id="nftListings"></div>
+</section>
+    
     
     <!-- Section 2: Buy NFT -->
     <section id="buyNFT">
