--- a/Affiliate/index4.html
+++ b/Affiliate/index4.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NFT & Affiliate Management</title>
-    <link rel="stylesheet" href="style.css"> <!-- Ensure the CSS file is linked -->
+    <link rel="stylesheet" href="styles.css"> <!-- Ensure the CSS file is linked -->
     <script src="https://cdn.jsdelivr.net/npm/ethers@5.x/dist/ethers.min.js"></script>
 </head>
 <body>
