--- a/Affiliate/index4.html
+++ b/Affiliate/index4.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NFT & Affiliate Management</title>
     <link rel="stylesheet" href="styles.css"> <!-- Ensure the CSS file is linked -->
-    <script src="https://cdn.jsdelivr.net/npm/ethers@5.x/dist/ethers.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/ethers@5.2/dist/ethers.umd.min.js"></script>
+
 </head>
 <body>
 <div class="container">
