--- a/Affiliate/index4.html
+++ b/Affiliate/index4.html
@@ -26,8 +26,7 @@
 
     <!-- Section for displaying listed NFTs -->
     <section id="listedNFTs">
-        <h2>Listed NFTs</h2>
-        <div id="nftListings"></div>
+        <div id="listingStatus"></div>
     </section>
     
     <!-- Section 2: Buy NFT -->
