--- a/Affiliate/index4.html
+++ b/Affiliate/index4.html
@@ -12,17 +12,18 @@
 <div class="container">
     <h1>NFT Minting & Affiliate Management</h1>
     
-    <!-- Section 1: List NFT for Sale -->
-    <section id="listNFT">
-        <h2>List NFT for Sale</h2>
-        <form id="listForm">
-            <input type="text" id="nftName" placeholder="NFT Name" required>
-            <input type="text" id="nftDescription" placeholder="NFT Description" required>
-            <input type="text" id="nftPrice" placeholder="Price in BNB" required> <!-- Updated placeholder to BNB -->
-            <button type="submit">List NFT</button>
-        </form>
-        <div id="listMessage" class="message"></div>
-    </section>
+   <!-- Section 1: List NFT for Sale -->
+<section id="listNFT">
+    <h2>List NFT for Sale</h2>
+    <form id="listForm">
+        <input type="text" id="nftName" placeholder="NFT Name" required>
+        <input type="text" id="nftDescription" placeholder="NFT Description" required>
+        <input type="text" id="nftPrice" placeholder="Price in BNB" required>
+        <button type="submit">List NFT</button>
+    </form>
+    <div id="listMessage" class="message"></div>
+</section>
+
 
     <!-- Section for displaying listed NFTs -->
     <section id="listedNFTs">
