--- a/Affiliate/index4.html
+++ b/Affiliate/index4.html
@@ -19,6 +19,7 @@
         <input type="text" id="nftName" placeholder="NFT Name" required>
         <input type="text" id="nftDescription" placeholder="NFT Description" required>
         <input type="text" id="nftPrice" placeholder="Price in BNB" required>
+         <input type="text" id="nftTokenURI" placeholder="NFT Token URI" required>
         <button type="submit">List NFT</button>
     </form>
     <div id="listMessage" class="message"></div>
