--- a/Affiliate/withdraw.html
+++ b/Affiliate/withdraw.html
@@ -1,1 +1,73 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Affiliate Commission Withdrawal</title>
+    <link rel="stylesheet" href="styles.css"> <!-- Ensure the CSS file is linked -->
+    <script src="https://cdn.jsdelivr.net/npm/ethers@5.2/dist/ethers.umd.min.js"></script>
+</head>
+<body>
+<div class="container">
+    <h1>Affiliate Commission Withdrawal</h1>
+    
+    <!-- Section 3: Affiliate Commission Withdrawal -->
+    <section id="affiliateWithdraw">
+        <h2>Affiliate Commission Withdrawal</h2>
+        <form id="withdrawForm">
+            <input type="text" id="amount" placeholder="Enter Amount in ETH" required>
+            <button type="submit">Withdraw</button>
+        </form>
+        <div id="withdrawMessage" class="message"></div>
+    </section>
+</div>
 
+<script>
+document.addEventListener('DOMContentLoaded', async () => {
+    const provider = new ethers.providers.Web3Provider(window.ethereum, "any");
+    await provider.send("eth_requestAccounts", []);
+    const signer = provider.getSigner();
+
+    const affiliateTrackerContractAddress = "0xEFa8d83E017cc6A9e36d91fe08fA308bafDB7E8E";
+
+    const affiliateTrackerABI = [
+        {
+            "inputs": [
+                {
+                    "internalType": "address",
+                    "name": "_contract",
+                    "type": "address"
+                }
+            ],
+            "name": "allowContract",
+            "outputs": [],
+            "stateMutability": "nonpayable",
+            "type": "function"
+        },
+        // Other ABI functions...
+    ];
+
+    const affiliateTrackerContract = new ethers.Contract(affiliateTrackerContractAddress, affiliateTrackerABI, signer);
+
+    const withdrawForm = document.getElementById('withdrawForm');
+
+    withdrawForm.addEventListener('submit', async (e) => {
+        e.preventDefault();
+        
+        const amount = document.getElementById('amount').value;
+        try {
+            // Call the contract function for withdrawal
+            const tx = await affiliateTrackerContract.withdrawEarnings({ value: ethers.utils.parseEther(amount) });
+            await tx.wait();
+            alert("Withdrawal successful!");
+        } catch (err) {
+            console.error("Withdrawal failed:", err);
+            alert("Withdrawal failed. Please try again.");
+        }
+    });
+});
+</script>
+
+<script src="script.js"></script> <!-- Link to the JavaScript file -->
+</body>
+</html>
