--- a/Affiliate/withdraw.html
+++ b/Affiliate/withdraw.html
@@ -14,6 +14,7 @@
     <!-- Section 3: Affiliate Commission Withdrawal -->
     <section id="affiliateWithdraw">
         <h2>Affiliate Commission Withdrawal</h2>
+        <div id="commissionInfo" class="message"></div> <!-- Display affiliate's commission information -->
         <form id="withdrawForm">
             <input type="text" id="amount" placeholder="Enter Amount in ETH" required>
             <button type="submit">Withdraw</button>
@@ -22,13 +23,62 @@
     </section>
 </div>
 
+<script src="script.js"></script> <!-- Link to the JavaScript file -->
+
 <script>
 document.addEventListener('DOMContentLoaded', async () => {
     const provider = new ethers.providers.Web3Provider(window.ethereum, "any");
     await provider.send("eth_requestAccounts", []);
     const signer = provider.getSigner();
 
+    const affiliateTrackerContract = new ethers.Contract(
+        affiliateTrackerAddress, // Use the contract address defined in script.js
+        [ // Contract ABI
+            // Define the ABI methods here
+            {
+                "constant": true,
+                "inputs": [
+                    {
+                        "name": "affiliate",
+                        "type": "address"
+                    }
+                ],
+                "name": "getAffiliateEarnings",
+                "outputs": [
+                    {
+                        "name": "",
+                        "type": "uint256"
+                    }
+                ],
+                "payable": false,
+                "stateMutability": "view",
+                "type": "function"
+            },
+            {
+                "constant": false,
+                "inputs": [],
+                "name": "withdrawEarnings",
+                "outputs": [],
+                "payable": false,
+                "stateMutability": "nonpayable",
+                "type": "function"
+            }
+        ],
+        signer
+    );
+
+    const commissionInfo = document.getElementById('commissionInfo');
     const withdrawForm = document.getElementById('withdrawForm');
+
+    // Function to get affiliate's commission information
+    async function displayCommissionInfo() {
+        const affiliateAddress = await signer.getAddress();
+        const earnings = await affiliateTrackerContract.getAffiliateEarnings(affiliateAddress);
+        commissionInfo.innerHTML = `<p>Your earned commissions: ${ethers.utils.formatEther(earnings)} ETH</p>`;
+    }
+
+    // Display commission information when the page loads
+    await displayCommissionInfo();
 
     withdrawForm.addEventListener('submit', async (e) => {
         e.preventDefault();
@@ -39,6 +89,8 @@ document.addEventListener('DOMContentLoaded', async () => {
             const tx = await affiliateTrackerContract.withdrawEarnings({ value: ethers.utils.parseEther(amount) });
             await tx.wait();
             alert("Withdrawal successful!");
+            // Update commission information after withdrawal
+            await displayCommissionInfo();
         } catch (err) {
             console.error("Withdrawal failed:", err);
             alert("Withdrawal failed. Please try again.");
@@ -46,8 +98,6 @@ document.addEventListener('DOMContentLoaded', async () => {
     });
 });
 </script>
-
-<script src="script.js"></script> <!-- Link to the JavaScript file -->
 
 </body>
 </html>
