--- a/Affiliate/withdraw.html
+++ b/Affiliate/withdraw.html
@@ -15,10 +15,7 @@
     <section id="affiliateWithdraw">
         <h2>Affiliate Commission Withdrawal</h2>
         <div id="commissionInfo" class="message"></div> <!-- Display affiliate's commission information -->
-        <form id="withdrawForm">
-            <input type="text" id="amount" placeholder="Enter Amount in ETH" required>
-            <button type="submit">Withdraw</button>
-        </form>
+        <button id="withdrawButton">Withdraw</button>
         <div id="withdrawMessage" class="message"></div>
     </section>
 </div>
@@ -68,9 +65,10 @@ document.addEventListener('DOMContentLoaded', async () => {
     );
 
     const commissionInfo = document.getElementById('commissionInfo');
-    const withdrawForm = document.getElementById('withdrawForm');
+    const withdrawButton = document.getElementById('withdrawButton');
+    const withdrawMessage = document.getElementById('withdrawMessage');
 
-    // Function to get affiliate's commission information
+    // Function to get affiliate's commission information and display it
     async function displayCommissionInfo() {
         const affiliateAddress = await signer.getAddress();
         const earnings = await affiliateTrackerContract.getAffiliateEarnings(affiliateAddress);
@@ -80,20 +78,18 @@ document.addEventListener('DOMContentLoaded', async () => {
     // Display commission information when the page loads
     await displayCommissionInfo();
 
-    withdrawForm.addEventListener('submit', async (e) => {
-        e.preventDefault();
-        
-        const amount = document.getElementById('amount').value;
+    // Withdraw button click event handler
+    withdrawButton.addEventListener('click', async () => {
         try {
             // Call the contract function for withdrawal
-            const tx = await affiliateTrackerContract.withdrawEarnings({ value: ethers.utils.parseEther(amount) });
+            const tx = await affiliateTrackerContract.withdrawEarnings();
             await tx.wait();
-            alert("Withdrawal successful!");
+            withdrawMessage.textContent = "Withdrawal successful!";
             // Update commission information after withdrawal
             await displayCommissionInfo();
         } catch (err) {
             console.error("Withdrawal failed:", err);
-            alert("Withdrawal failed. Please try again.");
+            withdrawMessage.textContent = "Withdrawal failed. Please try again.";
         }
     });
 });
