--- a/Affiliate/view.html
+++ b/Affiliate/view.html
@@ -410,7 +410,11 @@ const affiliateTrackerABI = [
         try {
             const affiliateAddress = await signer.getAddress();
             const earnings = await affiliateTrackerContract.affiliateEarnings(affiliateAddress);
-            commissionDetails.innerHTML = `<p>Your earned commissions: ${ethers.utils.formatEther(earnings)} ETH</p>`;
+
+            // Assuming the earnings are in BNB, you may need to adjust the conversion factor accordingly
+            const bnbEarnings = ethers.utils.formatUnits(earnings, "ether"); // Convert from wei to BNB
+
+            commissionDetails.innerHTML = `<p>Your earned commissions: ${bnbEarnings} BNB</p>`;
         } catch (error) {
             console.error("Error fetching commission information:", error);
             commissionDetails.innerHTML = "<p>Error fetching commission information. Please try again later.</p>";
