--- a/Affiliate/index.html
+++ b/Affiliate/index.html
@@ -42,6 +42,6 @@
     </section>
 </div>
 
-<script src="script.js"> </script> <!-- Link to the JavaScript file -->
+<script src="mint-script.js"> </script> <!-- Link to the JavaScript file -->
 </body>
 </html>
