--- a/Affiliate/link.html
+++ b/Affiliate/link.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css"> <!-- Ensure the CSS file is linked -->
     <title>Affiliate Link Generator</title>
 </head>
 <body>
