--- a/Affiliate/index.html
+++ b/Affiliate/index.html
@@ -57,6 +57,6 @@ document.addEventListener("DOMContentLoaded", function() {
 });
 </script>
 
-<script src="mint-script.js"> </script> <!-- Link to the JavaScript file -->
+<script src="main-script.js"> </script> <!-- Link to the JavaScript file -->
 </body>
 </html>
