--- a/Affiliate/dashboard.html
+++ b/Affiliate/dashboard.html
@@ -28,7 +28,18 @@
         <input type="number" id="commissionRate" placeholder="Commission Rate (%)">
         <button onclick="setCommissionRate()">Set Rate</button>
     </div>
+
+    <div class="toggle">
+    <label class="switch">
+        <input id="directPaymentToggle" type="checkbox">
+        <span class="slider round"></span>
+    </label>
+    <span>Direct Payments</span>
+</div>
+    
 </section>
+
+    
 
 
 
