--- a/Affiliate/dashboard.html
+++ b/Affiliate/dashboard.html
@@ -6,7 +6,6 @@
     <title>NFT & Affiliate Management</title>
     <link rel="stylesheet" href="styles.css"> <!-- Ensure the CSS file is linked -->
     <script src="https://cdn.jsdelivr.net/npm/ethers@5.2/dist/ethers.umd.min.js"></script>
-
 </head>
 <body>
 <section id="adminControls">
@@ -28,21 +27,18 @@
         <input type="number" id="commissionRate" placeholder="Commission Rate (%)">
         <button onclick="setCommissionRate()">Set Rate</button>
     </div>
-
-    <div class="toggle">
-    <label class="switch">
-        <input id="directPaymentToggle" type="checkbox">
-        <span class="slider round"></span>
-    </label>
-    <span>Direct Payments</span>
-</div>
-    
+    <div id="directPaymentControl">
+        <h3>Direct Payments</h3>
+        <label class="switch">
+            <input id="directPaymentToggle" type="checkbox">
+            <span class="slider round"></span>
+        </label>
+        <span id="directPaymentStatus">Direct Payments Enabled</span>
+    </div>
+    <button id="fetchSalesBtn">Fetch Sales</button> <!-- New button for fetching sales -->
+    <ul id="salesList"></ul> <!-- List to display fetched sales -->
 </section>
 
-    
-
-
-
-<script src="mint-script.js"> </script> <!-- Link to the JavaScript file -->
+<script src="dashboard.js"></script> <!-- Link to the JavaScript file -->
 </body>
 </html>
