--- a/Affiliate/dashboard.html
+++ b/Affiliate/dashboard.html
@@ -27,6 +27,12 @@
         <input type="number" id="commissionRate" placeholder="Commission Rate (%)">
         <button onclick="setCommissionRate()">Set Rate</button>
     </div>
+    <div id="toggleDirectPaymentForUser">
+    <h3>Toggle Direct Payment for User</h3>
+    <input type="text" id="userAddress" placeholder="User Address">
+    <button id="toggleDirectPaymentForUserBtn">Toggle Direct Payment</button>
+</div>
+
     <div id="directPaymentControl">
         <h3>Direct Payments</h3>
         <label class="switch">
