--- a/Affiliate/dashboard.html
+++ b/Affiliate/dashboard.html
@@ -33,6 +33,18 @@
     <button id="toggleDirectPaymentForUserBtn">Toggle Direct Payment</button>
 </div>
 
+    <div id="approvedAffiliates">
+    <h3>Approved Affiliates</h3>
+    <ul id="affiliateList"></ul>
+</div>
+
+<div id="approvedUsers">
+    <h3>Approved Users</h3>
+    <ul id="userList"></ul>
+</div>
+
+
+    
     <div id="directPaymentControl">
         <h3>Direct Payments</h3>
         <label class="switch">
