--- a/Affiliate/dashboard.html
+++ b/Affiliate/dashboard.html
@@ -54,6 +54,9 @@
         </div>
         <button id="fetchSalesBtn">Fetch Sales</button> <!-- New button for fetching sales -->
         <ul id="salesList"></ul> <!-- List to display fetched sales -->
+
+        <button id="withdrawFundsBtn">Withdraw Funds</button>
+
     </section>
 </div>
 
