--- a/Affiliate/dashboard.html
+++ b/Affiliate/dashboard.html
@@ -55,8 +55,9 @@
         <button id="fetchSalesBtn">Fetch Sales</button> <!-- New button for fetching sales -->
         <ul id="salesList"></ul> <!-- List to display fetched sales -->
 <button id="viewContractBalanceBtn">View Contract Balance</button>
-<!-- Button to trigger emergency stop -->
 <button id="emergencyStopBtn">Emergency Stop</button>
+<button id="resumeBtn">Resume</button>
+
 
         <button id="withdrawFundsBtn">Withdraw Funds</button>
 
