--- a/Affiliate/dashboard.html
+++ b/Affiliate/dashboard.html
@@ -30,7 +30,7 @@
         </div>
         <div id="toggleDirectPaymentForUser">
             <h3>Toggle Direct Payment for User</h3>
-            <input type="text" id="userAddress" placeholder="User Address">
+            <input type="text" id="userAddressToggle" placeholder="User Address">
             <button id="toggleDirectPaymentForUserBtn">Toggle Direct Payment</button>
         </div>
 
@@ -54,13 +54,10 @@
         </div>
         <button id="fetchSalesBtn">Fetch Sales</button> <!-- New button for fetching sales -->
         <ul id="salesList"></ul> <!-- List to display fetched sales -->
-<button id="viewContractBalanceBtn">View Contract Balance</button>
-<button id="emergencyStopBtn">Emergency Stop</button>
-<button id="resumeBtn">Resume</button>
-
-
+        <button id="viewContractBalanceBtn">View Contract Balance</button>
+        <button id="emergencyStopBtn">Emergency Stop</button>
+        <button id="resumeBtn">Resume</button>
         <button id="withdrawFundsBtn">Withdraw Funds</button>
-
     </section>
 </div>
 
