--- a/Affiliate/dashboard.html
+++ b/Affiliate/dashboard.html
@@ -61,6 +61,6 @@
     </section>
 </div>
 
-<script src="dashboard.js"></script> <!-- Link to the JavaScript file -->
+<script src="dash-test.js"></script> <!-- Link to the JavaScript file -->
 </body>
 </html>
