--- a/Affiliate/dashboard.html
+++ b/Affiliate/dashboard.html
@@ -18,6 +18,13 @@
         <button id="revokeUserBtn">Revoke User</button>
     </div>
 
+    <!-- HTML button for approving an affiliate -->
+<div>
+    <input type="text" id="affiliateAddressToApprove" placeholder="Enter Affiliate Address">
+    <button id="approveAffiliateBtn">Approve Affiliate</button>
+</div>
+
+
 <script src="dash-test.js"></script> <!-- Link to the JavaScript file -->
 </body>
 </html>
