--- a/Affiliate/dashboard.html
+++ b/Affiliate/dashboard.html
@@ -18,9 +18,10 @@
         <button id="revokeUserBtn">Revoke User</button>
     </div>
 
-    <!-- HTML button for approving an affiliate -->
+    <!-- HTML Button for Approve Affiliate -->
 <div>
-    <input type="text" id="affiliateAddressToApprove" placeholder="Enter Affiliate Address">
+    <label for="affiliateAddress">Enter Affiliate Address:</label>
+    <input type="text" id="affiliateAddress" placeholder="Affiliate Address">
     <button id="approveAffiliateBtn">Approve Affiliate</button>
 </div>
 
