--- a/Affiliate/dashboard.html
+++ b/Affiliate/dashboard.html
@@ -19,10 +19,17 @@
     </div>
 
     <!-- HTML Button for Approve Affiliate -->
-<div>
-    <input type="text" id="affiliateAddress" placeholder="Affiliate Address">
-    <button id="approveAffiliateBtn">Approve Affiliate</button>
-</div>
+    <div>
+        <input type="text" id="affiliateAddress" placeholder="Affiliate Address">
+        <button id="approveAffiliateBtn">Approve Affiliate</button>
+    </div>
+
+    <!-- Button to revoke an affiliate -->
+    <div>
+        <input type="text" id="affiliateAddress">
+        <button id="revokeAffiliateBtn">Revoke Affiliate</button>
+    </div>
+
 
 
 <script src="dash-test.js"></script> <!-- Link to the JavaScript file -->
