--- a/Affiliate/dashboard.html
+++ b/Affiliate/dashboard.html
@@ -29,7 +29,11 @@
         <input type="text" id="affiliateAddress">
         <button id="revokeAffiliateBtn">Revoke Affiliate</button>
     </div>
-
+    <!-- Button to set commission rate -->
+    <div>
+        <input type="number" id="commissionRate" name="commissionRate" min="0" max="100" required>
+        <button id="setCommissionRateBtn">Set Commission Rate</button>
+    </div>
 
 
 <script src="dash-test.js"></script> <!-- Link to the JavaScript file -->
