--- a/Affiliate/dashboard.html
+++ b/Affiliate/dashboard.html
@@ -26,7 +26,7 @@
 
     <!-- Button to revoke an affiliate -->
     <div>
-        <input type="text" id="affiliateAddress">
+        <input type="text" id="affiliateAddress" placeholder="Affiliate Address">
         <button id="revokeAffiliateBtn">Revoke Affiliate</button>
     </div>
     <!-- Button to set commission rate -->
