--- a/Affiliate/dashboard.html
+++ b/Affiliate/dashboard.html
@@ -18,11 +18,12 @@
         <button id="revokeUserBtn">Revoke User</button>
     </div>
 
-    <!-- HTML Button for Approve Affiliate -->
     <div>
-        <input type="text" id="affiliateAddress" placeholder="Affiliate Address">
-        <button id="approveAffiliateBtn">Approve Affiliate</button>
-    </div>
+    <input type="text" id="affiliateAddress" placeholder="Enter Affiliate Address" required>
+    <input type="number" id="commissionRate" placeholder="Enter Commission Rate" min="0" max="100" required>
+    <button id="approveAndRegisterAffiliateBtn">Approve and Register Affiliate</button>
+</div>
+
 
     <!-- Button to revoke an affiliate -->
     <div>
