--- a/Affiliate/dashboard.html
+++ b/Affiliate/dashboard.html
@@ -36,6 +36,11 @@
         <button id="setCommissionRateBtn">Set Commission Rate</button>
     </div>
 
+    <div>
+    <button id="toggleDirectPaymentBtn">Toggle Direct Payment</button>
+    </div>
+
+
 
 <script src="dash-test.js"></script> <!-- Link to the JavaScript file -->
 </body>
