--- a/Affiliate/dashboard.html
+++ b/Affiliate/dashboard.html
@@ -38,6 +38,7 @@
 
     <div>
     <button id="toggleDirectPaymentBtn">Toggle Direct Payment</button>
+    <p id="paymentStatus"></p>
     </div>
 
 
