--- a/Affiliate/dashboard.html
+++ b/Affiliate/dashboard.html
@@ -41,6 +41,12 @@
     <p id="paymentStatus"></p>
     </div>
 
+    <div>
+    <input type="text" id="affiliateTrackerAddress" />
+    <button id="setAffiliateTrackerAddressBtn">Set AffiliateTracker Address</button>
+    </div>
+
+
 
 
 <script src="dash-test.js"></script> <!-- Link to the JavaScript file -->
