--- a/Affiliate/dashboard.html
+++ b/Affiliate/dashboard.html
@@ -42,8 +42,12 @@
     </div>
 
     <div>
-    <input type="text" id="affiliateTrackerAddress" />
-    <button id="setAffiliateTrackerAddressBtn">Set AffiliateTracker Address</button>
+    <!-- Input field for entering AffiliateTracker contract address -->
+<input type="text" id="affiliateTrackerAddress" placeholder="Enter AffiliateTracker Address" />
+
+<!-- Button to set AffiliateTracker address -->
+<button id="setAffiliateTrackerAddressBtn">Set AffiliateTracker Address</button>
+
     </div>
 
 
