--- a/Affiliate/dashboard.html
+++ b/Affiliate/dashboard.html
@@ -32,8 +32,9 @@
     </div>
     <!-- Button to set commission rate -->
     <div>
-        <input type="number" id="commissionRate" name="commissionRate" min="0" max="100" required>
+        <input type="number" id="commissionRate" placeholder="Enter new commission rate">
         <button id="setCommissionRateBtn">Set Commission Rate</button>
+
     </div>
 
     <div>
