--- a/Affiliate/dashboard.html
+++ b/Affiliate/dashboard.html
@@ -32,7 +32,7 @@
     </div>
     <!-- Button to set commission rate -->
     <div>
-        <input type="number" id="commissionRate" placeholder="Enter new commission rate">
+        <input type="number" id="commissionRate" placeholder="Enter new commission rate" min="0" max="100" required>
         <button id="setCommissionRateBtn">Set Commission Rate</button>
 
     </div>
