--- a/Affiliate/dashboard.html
+++ b/Affiliate/dashboard.html
@@ -42,6 +42,15 @@
     <p id="paymentStatus"></p>
     </div>
 
+    <!-- Button to fetch the status of direct payments -->
+<div>
+    <button id="fetchDirectPaymentStatusBtn">Fetch Direct Payment Status</button>
+</div>
+
+    <!-- Element to display the status of direct payments -->
+<div id="directPaymentStatus"></div>
+
+
     <div>
     <!-- Input field for entering AffiliateTracker contract address -->
 <input type="text" id="affiliateTrackerAddress" placeholder="Enter AffiliateTracker Address" />
